--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
 
     <!-- Your Firebase configuration -->
     <script src="js/firebase-config.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
