--- a/menu.html
+++ b/menu.html
@@ -102,11 +102,18 @@
             db.collection('menu').get().then(querySnapshot => {
                 querySnapshot.forEach(doc => {
                     const item = doc.data();
+
+                    // Skip items that are missing essential data
+                    if (!item.name || typeof item.price !== 'number') {
+                        console.error('Skipping invalid menu item:', item);
+                        return; // Continue to the next item
+                    }
+
                     const itemElement = document.createElement('div');
                     itemElement.classList.add('menu-item');
                     itemElement.innerHTML = `
                         <h3>${item.name}</h3>
-                        <p>${item.description}</p>
+                        <p>${item.description || ''}</p>
                         <p class="price">₹${item.price.toFixed(2)}</p>
                         <button class="btn add-to-cart" data-id="${doc.id}" data-name="${item.name}" data-price="${item.price}">Add to Cart</button>
                     `;
