--- a/menu.html
+++ b/menu.html
@@ -63,12 +63,15 @@
         </div>
     </footer>
 
-    <!-- Firebase SDK -->
+    <!-- Firebase SDK - Load in correct order -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-    <!-- Your Firebase configuration and main script -->
+    <!-- Your Firebase configuration -->
     <script src="js/firebase-config.js"></script>
+    
+    <!-- Page specific script -->
     <script src="js/main.js"></script>
 
 </body>
